# pesquisa-preco

./: .gitignore  Cotação.py  Home.py  Lei 14.133.txt  babilaca_req_count.json  build_rag.py  cnaes_completo.json  debug_apis.py  gerar_cnaes.py  gerar_cnaes_notebook.ipynb  lei_parser.py  rag_knowledge_base.json  requirements.txt  streamlit_app.py  test_adesoes_cnpj.py  test_api.py  test_apis.py  test_cnpj.py  test_cnpj_endpoints.py  test_cnpj_endpoints2.py  test_cnpj_endpoints3.py  test_cnpj_endpoints4.py  test_ddgs_bing.py  test_legado.py  test_nifornecedor.py  test_nifornecedor2.py  test_nifornecedor3.py  test_pncp_discovery.py  test_pncp_links.py  test_search_debug.py  test_swagger.py
.streamlit/: config.toml  secrets.toml
Projeto Adesões/: catalogo_pdm.json  catalogo_servicos.json  esfera_uasg.json  pyproject.toml
pages/: Adesões.py  Banco_de_Fornecedores.py  Consulta.py  Consulta.py.bak  Detalhes_Compra.py  Notas_Fiscais.py  O_Babilaca_(IA).py  Web_Scraping.py  base_juridica.py
pages/RAG/: Acórdãos_TCU_licitacoes_contratos.xls  Decreto 10.024 Pregão Eletrônico.txt  INSTRUÇÃO NORMATIVA 5 - 2017 - Planejamento e Contratação.txt  INSTRUÇÃO NORMATIVA SEGES 58 - 2022 - Estudos técnicos e planejamento.txt  INSTRUÇÃO NORMATIVA SEGESME 67 - 2021 - Cotação Eletrônica - Dispensa Eletrônica - Dispensa de Licitação.txt  INSTRUÇÃO NORMATIVA SEGESME Nº 65 - 2021 - Pesquisa de Preços.txt
